# axum-jinja-template

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/routes/: error_handling.rs  mod.rs  pages.rs
src/templates/: layout.html
