[package]
name = "axum-jinja-template"
version = "0.0.1"
edition = "2021"

[dependencies]

axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
tokio = { version = "1.21.2", features = ["full"] }
minijinja = "1.0.4"
